style.css
html,
body {
    min-height: 100%;
    background: #222;
}

body {
    padding: 0 0 500px;
    background: transparent;
    background-color: transparent
}

#bg-fixed {
    position: fixed;
    inset: 0;
    z-index: -2;
    background: #222 url(bg-lowerspeed.jpg) center center / cover no-repeat;
    pointer-events: none;
    transform: translateZ(0);
}

body.win12 #bg-fixed {
    background-image: url(win12.svg)
}

body.nikov #bg-fixed {
    background-image: url(nikov.svg)
}

.a {
    color: var(--text);
    text-decoration: none !important;
    cursor: pointer
}

a.jump {
    color: #2983cc
}

a.jump:hover {
    color: #999
}

a.jump:active {
    color: #666
}

.card.pjc:not(.defc) {
    backdrop-filter: blur(20px);
    background: #ffffff50 !important
}

::-webkit-scrollbar {
    width: 14px
}

::-webkit-scrollbar:hover {
    background-color: #7f7f7f30
}

::-webkit-scrollbar-thumb {
    background: #7f7f7f70;
    background-clip: padding-box;
    border: 6px solid transparent;
    border-radius: 10px
}

::-webkit-scrollbar-thumb:hover {
    border: 4px solid transparent
}

#title {
    width: 330px;
    position: fixed;
    height: 250px;
    left: calc(50% - 165px);
    top: calc(50% - 125px)
}

#title>.su {
    width: 210px;
    fill: #6c91ee;
    position: absolute;
    top: 0;
    transition: 100ms;
    opacity: 0;
    transform: translateY(100px)
}

#title>.jiu {
    width: 150px;
    fill: #79bbdc;
    position: absolute;
    top: 10px;
    left: 140px;
    transition: 100ms;
    opacity: 0;
    transform: none
}

#title>.text {
    line-height: 1;
    position: absolute;
    opacity: 0;
    transition: 200ms;
    color: #f7f7f7
}

#title>.text.chinese {
    font-size: 40px;
    line-height: 1;
    top: 110px;
    left: 180px
}

#title>.text.eng {
    font-size: 20px;
    line-height: 1;
    top: 190px;
    left: 50px
}

.eng {
    font-size: calc(35% + 8px);
    display: block;
    border-radius: 17px;
    background: none;
    padding: 4px 7px;
    margin: 5px 0 0 0;
    width: max-content;
    transform: scale(0.97);
    transition: 200ms;
    max-width: 100%;
    border: 2px solid transparent
}

.eng:hover {
    background: #7f7f7f30;
    transform: none;
    border: 2px solid #2983cc
}

.detail {
    background-color: #2983cc;
    color: #fff;
    border-radius: 5px;
    width: 15px;
    height: 15px;
    font-size: 8px;
    display: inline-block;
    text-align: center;
    margin: 1px 2px;
    line-height: 1.2
}

.detail:hover::before {
    content: var(--cnt);
    display: block;
    position: absolute;
    transform: translateX(20px);
    z-index: 99;
    width: 400px;
    height: max-content;
    background: #222;
    color: #efefef;
    padding: 5px 10px;
    border-radius: 10px;
    box-shadow: 1px 1px 10px #00000070;
    border: 1px solid #7f7f7f40
}

.card {
    border-radius: 20px !important;
    color: #e2e2e2;
    background-color: #222222d0 !important;
    backdrop-filter: blur(10px);
    box-shadow: 0 2px 3px #00000070, 0px 3px 35px 1px #000000
}

.card p {
    margin: 5px 0 0 0
}

.highlight.width:not(.show) {
    width: 0 !important
}

.highlight.width {
    transition: 1s cubic-bezier(0.68, -0.55, 0.27, 1.55)
}

.jt>.body>div {
    display: flex;
    justify-content: space-between;
    margin-top: 2px;
    overflow: hidden
}

.jt>.body>div>div {
    width: calc(100% - 90px)
}

.jt>.body>div>div>div {
    background: #7f7f7f50;
    border-radius: 20px;
    height: 8px;
    width: 100%;
    float: right;
    margin-top: 9px;
    transition: 200ms
}

.jt>.body>div>div:hover>div {
    margin-top: 6px;
    height: 14px
}

.pjc#nikov {
    color: #000;
    box-shadow: 0 1px 2px #44444450, 0px 3px 35px 1px #00000050
}

.pjc#win12>.body>.tool>a,
.pjc#tapple>.body>.tool>a {
    background-color: #ffffff10;
    color: #fff
}

.pjc>.body>.tool>a {
    background-color: #ffffff30;
    border-radius: 10px;
    color: #000;
    flex: 1;
    transition: 200ms, background-color 50ms;
    margin: 5px;
    font-size: 22px;
    padding: 2px 10px;
    transform: scale(0.97)
}

.pjc.defc>.body>.tool>a {
    background-color: #ffffff60
}

.pjc>.body>.tool>a:hover {
    background-color: #ffffff70;
    transform: none
}

.pjc.defc>.body>.tool>a:hover {
    background-color: #ffffffb0
}

.pjc>.body>.tool>a:active {
    transform: scale(0.94)
}

.pjc>.body>.tool>a>.eng {
    font-size: 15px;
    margin: 0
}

.pjc>.body>.tool>a>.eng:hover {
    background: none
}

.box.text {
    color: #fff
}

